# pyterminol

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
terminol/: colors.py
